# 1brc

./: Cargo.toml  README.md  bench.sh
.cargo/: config.toml
src/: lib.rs  main.rs  split.rs  tests.rs
