[package]
name = "onebrc"
version = "0.1.0"
edition = "2021"

[dependencies]
hashbrown = { version = "0.14.3", default-features = false, features = ["inline-more"] }
memchr = "2.7"
memmap2 = "0.9"
rustc-hash = "1.1.0"

[profile.dev]
lto = "thin"
panic = 'abort'

[profile.release]
debug = true
lto = "thin"
panic = 'abort'
